fixed issues, when no images is provided slider is invisible and so on

--- a/src/modules/components/ExtraImages/index.css
+++ b/src/modules/components/ExtraImages/index.css
@@ -1,7 +1,7 @@
 .slider {
     width: 100%;
-    max-width: 300px;
-    height: 100px;
+    /*max-width: 300px;*/
+    height: 80px;
     margin: 0 auto;
     position: relative;
 
@@ -11,7 +11,7 @@
 .slide {
     position: absolute;
     top: 0;
-    height: 100px;
+    height: 80px;
     padding: 10px;
     display: flex;
     align-items: center;
@@ -47,4 +47,9 @@
 .slider__btn--right {
     right: 7%;
     transform: translate(50%, -50%);
+}
+
+.ant-image-mask-info {
+    opacity: 0;
+    background: none;
 }
